--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
@@ -28,4 +28,4 @@ body {
 #app {
     height: 100vh;
     text-align: center;
-}
+} */
